force-app/main/default/objects/Employment_Details__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <description>Job title</description>
    <label>Designation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>