force-app/main/default/objects/Employment_Details__c/fields/Employer_Name__c.field-meta.xml
<CustomField>
    <fullName>Employer_Name__c</fullName>
    <description>Organization</description>
    <inlineHelpText>Enter employee name or NA if unemployed</inlineHelpText>
    <label>Employer Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>