force-app/main/default/objects/Employment_Details__c/fields/Office_Address__c.field-meta.xml
<CustomField>
    <fullName>Office_Address__c</fullName>
    <description>Employer address</description>
    <label>Office Address</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>