force-app/main/default/objects/Employment_Details__c/fields/Work_Experience__c.field-meta.xml
<CustomField>
    <fullName>Work_Experience__c</fullName>
    <description>Years</description>
    <label>Work Experience</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>